<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/register_background"
        android:gravity="bottom"
        android:orientation="vertical"
        android:weightSum="1">

        <EditText
            android:id="@+id/et_send_timer"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/register_send_timer"
            android:inputType="number"
            android:textColor="@color/naviii"
            android:textColorHint="@color/naviii"
            android:textColorLink="@color/naviii"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_sound_timer"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/register_sound_timer"
            android:inputType="number"
            android:textColor="@color/naviii"
            android:textColorHint="@color/naviii"
            android:textColorLink="@color/naviii"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_button"
            android:ems="10"
            android:freezesText="false"
            android:gravity="center"
            android:hint="@string/register_name"
            android:inputType="textPersonName"
            android:textColor="@color/naviii"
            android:textColorHint="@color/naviii"
            android:textColorLink="@color/naviii"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_male"
                style=""
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@drawable/white_button"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/register_male"
                android:onClick="setGender"
                android:textColor="@color/naviii"
                android:textColorHint="@color/naviii"
                android:textColorLink="@color/naviii"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_female"
                style=""
                android:layout_width="145dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:background="@drawable/white_button"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/register_female"
                android:onClick="setGender"
                android:textColor="@color/naviii"
                android:textColorHint="@color/naviii"
                android:textColorLink="@color/naviii"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/et_age"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:background="@drawable/white_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/register_age"
            android:inputType="number"
            android:textColor="@color/naviii"
            android:textColorHint="@color/naviii"
            android:textColorLink="@color/naviii"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginBottom="30dp"
            android:background="@drawable/white_button"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/register_phone"
            android:inputType="phone"
            android:textColor="@color/naviii"
            android:textColorHint="@color/naviii"
            android:textColorLink="@color/naviii"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_confirm"
                style=""
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:background="@drawable/light_blue_button"
                android:onClick="saveUserData"
                android:text="@string/register_confirm"
                android:textSize="18sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_reset"
                style=""
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/dark_blue_button"
                android:onClick="resetInputData"
                android:text="@string/register_reset"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</layout>
